brain/sources/prod-metadata/objects/Question_Follow_Up__c/Question_Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Question Follow Up</label>
    <nameField>
        <displayFormat>QFU-{00000}</displayFormat>
        <label>Question Follow Up Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Follow Ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>