brain/sources/prod-metadata/objects/Question_Follow_Up__c/fields/Follow_Up_Question__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Question__c</fullName>
    <label>Follow Up Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>