brain/sources/prod-metadata/objects/Question_Follow_Up__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>Question Follow-Ups</relationshipLabel>
    <relationshipName>Question_Follow_Ups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>